# umlip-sisso-kappa

./: Makefile  README.md  environment.yml  pyproject.toml  run_pipeline.sh  verify_setup.sh
configs/: default.yaml  setonix.yaml  setonix_pilot.yaml
data/: benchmark_seed.csv  benchmark_seed_pilot.csv  dft_reference_subset.csv
notebooks/: exploration.ipynb
scripts/: 01_assemble_dataset.py  02_compute_T0.py  03_compute_T1.py  04_compute_T2.py  05_run_sisso.py  06_validate_softening.py  07_make_figures.py
src/umlip_kappa/: __init__.py  calculators.py  dataset.py  features_T0.py  features_T1.py  features_T2.py  io_utils.py  plots.py  slack.py  sr.py  validate.py
src/umlip_kappa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
submit/: cpu_stages.sbatch  gather.sbatch  t1_array.sbatch  t2_array.sbatch
