[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umlip_kappa"
version = "0.1.0"
description = "Symbolic regression of lattice thermal conductivity using universal MLIP-derived features"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Author Name", email = "author@institution.edu" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pyyaml",
    "tqdm",
    "rich",
    "ase>=3.22",
    "phonopy>=2.21",
    "pymatgen>=2023.10",
    "matminer>=0.9",
    "sympy",
]

[project.optional-dependencies]
pysr = ["pysr>=0.18"]
dev = ["pytest", "ruff", "black", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
